# capgenie-web

./: .ebignore  .gitignore  AUTH_README.md  README.md  README_EB.md  app.py  auth.py  deploy.sh  manage_users.py  requirements.txt
.ebextensions/: 01_flask.config  02_packages.config  03_commands.config
.elasticbeanstalk/: config.yml
cap_genie_dist/: pyproject.toml  requirements.txt  setup.py
cap_genie_dist/src/capgenie/: biodistribution.py  bubble.py  cli.py  denoise.cpp  enrichment.py  filter_count.cpp  fuzzy_match.cpp  fuzzy_match.h  mani.cpp  motif.py  platform_compat.h  prune_reads.cpp  search_aav9.py  spreadsheet.py
cap_genie_dist/src/capgenie/edlib/: edlib.cpp  edlib.h
static/: looped_dna.webm  smoke_rotated.webm
static/css/: flank.css  input_dataset.css  leftbar.css  loading.css  main.css  select_options.css  view_dataset.css  wizard.css
static/js/: color.js  input_dataset.js  leftbar.js  new_dataset.js  running.js  view_dataset.js
templates/: documentation.html  download.html  index.html  login.html  new_dataset.html  running.html  view_dataset.html  view_datasets.html
